--- a/public/about.html
+++ b/public/about.html
@@ -160,17 +160,13 @@
           <h1>
             Karaoke Nite is a social app. Our north star is to create the
             next-gen
-            <span style="color: #ff8647">h</span
-            ><span style="color: #ff93ad">o</span
-            ><span style="color: #df73ff">u</span
-            ><span style="color: #fe3466">s</span
-            ><span style="color: #5cdc89">e</span>
+            <span class="orange">h</span><span class="pink__light">o</span
+            ><span class="pink">u</span><span class="pink__dark">s</span
+            ><span class="green">e</span>
 
-            <span style="color: #ff8647">p</span
-            ><span style="color: #f4ca2c">a</span
-            ><span style="color: #93d4a8">r</span
-            ><span style="color: #51e8e4">t</span
-            ><span style="color: #df73ff">y</span>.
+            <span class="orange">p</span><span class="yellow__light">a</span
+            ><span class="green__light">r</span><span class="teal">t</span
+            ><span class="pink">y</span>.
           </h1>
 
           <hr class="fancyLine" />
