--- a/public/index.html
+++ b/public/index.html
@@ -347,7 +347,7 @@ if (location.protocol != 'https:') {
             </div>
             <div>
               <p class="steps-description">
-                <label class="steps--label pink" for="sing-together">
+                <label class="steps--label pink__dark" for="sing-together">
                   Have a good time
                 </label>
                 Choose from a collection of hit songs and sing with your friends
