--- a/public/about.html
+++ b/public/about.html
@@ -154,7 +154,7 @@
       </nav>
     </header>
 
-    <main class="container--md">
+    <main class="container__md">
       <section class="article-grid">
         <article>
           <h1>
@@ -248,8 +248,11 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-left">
-          <span id="footer-name">KARAOKE NITE</span>
-          Made with <span aria-label="love" role="img">💖</span> in Brooklyn, NY
+          <div id="footer-name">KARAOKE NITE</div>
+          <div>
+            Made with <span aria-label="love" role="img">💖</span> in Brooklyn,
+            NY
+          </div>
         </div>
 
         <div class="footer-icons">
