--- a/public/index.html
+++ b/public/index.html
@@ -408,9 +408,11 @@ if (location.protocol != 'https:') {
       <div class="footer-bg">
         <div class="footer-container">
           <div class="footer-left">
-            <span id="footer-name">KARAOKE NITE</span><br />
-            Made with <span aria-label="love" role="img">💖</span> in Brooklyn,
-            NY
+            <div id="footer-name">KARAOKE NITE</div>
+            <div>
+              Made with <span aria-label="love" role="img">💖</span> in
+              Brooklyn, NY
+            </div>
           </div>
 
           <div class="footer-icons">
