--- a/public/scene.html
+++ b/public/scene.html
@@ -1671,7 +1671,7 @@
 
     <!-- Smiley Face -->
     <a
-      id="smiley"
+      class="peopleCounter"
       href="#peopleModal"
       rel="modal:open"
       title="Number of poeple in the room"
