--- a/public/faq.html
+++ b/public/faq.html
@@ -154,138 +154,146 @@
       </nav>
     </header>
 
-    <main class="container--md">
+    <main class="container__md">
       <h1>💬 Frequently Asked Questions</h1>
-      <div class="collapse-area">
-        <button type="button" class="collapse-button collapsible">
-          Do I need a microphone for Karaoke Nite?
-        </button>
+      <div class="collapse">
+        <div class="collapse-area">
+          <button type="button" class="collapse-button collapsible">
+            Do I need a microphone for Karaoke Nite?
+          </button>
 
-        <div class="collapse-content content">
-          <p>
-            While you don't need a handheld microphone for Karaoke Nite, it
-            certainly makes the experience better!
-          </p>
+          <div class="collapse-content content">
+            <p>
+              While you don't need a handheld microphone for Karaoke Nite, it
+              certainly makes the experience better!
+            </p>
 
-          <p>Here are some microphones that we recommend:</p>
+            <p>Here are some microphones that we recommend:</p>
 
-          <ul>
-            <li>
-              $49.99
-              <a
-                href="https://www.amazon.com/Singing-Machine-Bluetooth-Microphone-CPK545/dp/B07SLFVGSC/"
-                target="_blank"
-              >
-                Carpool Karaoke Mic</a
-              >
-              <!--             ($49.99) -->
-            </li>
-            <li>
-              $16.99
-              <a
-                href="https://www.amazon.com/Handheld-Microphone-Nintendo-Singing-Compatible/dp/B08K6WXR29"
-                target="_blank"
-              >
-                USB Handheld Microphone</a
-              >
-              <!--             ($16.99) -->
-            </li>
-          </ul>
-          <p>
-            P.S. We are working on a new and innovative way to sing without
-            using a professional microphone (*cough QR code and mobile), keep on
-            the look out for a feature update!
-          </p>
+            <ul>
+              <li>
+                $49.99
+                <a
+                  href="https://www.amazon.com/Singing-Machine-Bluetooth-Microphone-CPK545/dp/B07SLFVGSC/"
+                  target="_blank"
+                >
+                  Carpool Karaoke Mic</a
+                >
+                <!--             ($49.99) -->
+              </li>
+              <li>
+                $16.99
+                <a
+                  href="https://www.amazon.com/Handheld-Microphone-Nintendo-Singing-Compatible/dp/B08K6WXR29"
+                  target="_blank"
+                >
+                  USB Handheld Microphone</a
+                >
+                <!--             ($16.99) -->
+              </li>
+            </ul>
+            <p>
+              P.S. We are working on a new and innovative way to sing without
+              using a professional microphone (*cough QR code and mobile), keep
+              on the look out for a feature update!
+            </p>
+          </div>
         </div>
-      </div>
+        <div class="collapse-area">
+          <button type="button" class="collapse-button collapsible">
+            How do I connect my microphone to the PC?
+          </button>
+          <div class="collapse-content content">
+            <p>You can do this in three simple steps:</p>
+            <ol>
+              <li>Charge the microphone unit or make sure there's battery.</li>
+              <li>
+                Plug the other end of the cable into computer USB port or AUX
+                port.
+              </li>
+              <li>
+                Go to audio settings on your computer and set as input device.
+              </li>
+            </ol>
 
-      <div class="collapse-area">
-        <button type="button" class="collapse-button collapsible">
-          How do I connect my microphone to the PC?
-        </button>
-        <div class="collapse-content content">
-          <p>You can do this in three simple steps:</p>
-          <ol>
-            <li>Charge the microphone unit or make sure there's battery.</li>
-            <li>
-              Plug the other end of the cable into computer USB port or AUX
-              port.
-            </li>
-            <li>
-              Go to audio settings on your computer and set as input device.
-            </li>
-          </ol>
+            <p>
+              <b>Please note:</b>
+            </p>
 
-          <p>
-            <b>Please note:</b>
-          </p>
-
-          <p>
-            Due to Covid-19, we discourage all users from sharing microphones
-            with friends & hope everyone adopt a good microphone hygiene
-            routine!
-          </p>
+            <p>
+              Due to Covid-19, we discourage all users from sharing microphones
+              with friends & hope everyone adopt a good microphone hygiene
+              routine!
+            </p>
+          </div>
         </div>
-      </div>
-      <div class="collapse-area">
-        <button type="button" class="collapse-button collapsible">
-          How do I hear myself through the speakers?
-        </button>
+        <div class="collapse-area">
+          <button type="button" class="collapse-button collapsible">
+            How do I hear myself through the speakers?
+          </button>
 
-        <div class="collapse-content content">
-          <p>Windows users:</p>
-          <ol>
-            <li>Click on "Spearkers" in the taskbar.</li>
-            <li>
-              Click on "Sound" and make sure your microphone is set as the
-              default.
-            </li>
-            <li>Click on "Recording".</li>
-            <li>Check the "Listen to this device" box.</li>
-          </ol>
+          <div class="collapse-content content">
+            <p>Windows users:</p>
+            <ol>
+              <li>Click on "Spearkers" in the taskbar.</li>
+              <li>
+                Click on "Sound" and make sure your microphone is set as the
+                default.
+              </li>
+              <li>Click on "Recording".</li>
+              <li>Check the "Listen to this device" box.</li>
+            </ol>
 
-          <p>Mac users:</p>
-          <ol>
-            <li>Open QuickTime Player.</li>
-            <li>Click "File" ➡ "New Audio Recording".</li>
-            <li>
-              Move the volume bar higher and higher until you can hear yourself.
-            </li>
-          </ol>
+            <p>Mac users:</p>
+            <ol>
+              <li>Open QuickTime Player.</li>
+              <li>Click "File" ➡ "New Audio Recording".</li>
+              <li>
+                Move the volume bar higher and higher until you can hear
+                yourself.
+              </li>
+            </ol>
+          </div>
+        </div>
+        <div class="collapse-area">
+          <button type="button" class="collapsible collapse-button">
+            What are the new updates?
+          </button>
+
+          <div class="content collapse-content">
+            <h3>v0.2 is currently in production! Scoped to launch in May.</h3>
+
+            <h4>Release Build v0.1.3</h4>
+
+            <p>🆕 Added a /faq page.</p>
+            <p>🏗 Updated /about page.</p>
+            <p>🏗 Cleaned up the codebase in preparation of v0.2.</p>
+            <p>💸 Compiled the pre-seed pitch deck.</p>
+
+            <h4>Release Build v0.1.2</h4>
+
+            <p>
+              🆕 Added a Privacy Policy. Thanks, Min-Kyu! 🆕 Added demo video.
+              🆕 Added release notes.
+            </p>
+            <p>🆕 Added blog posts.</p>
+            <p>🏗 Removed Patreon links.</p>
+            <p>🐛 Fixed the "Let's Get It On" autoplay bug.</p>
+
+            <h4>Release Build v0.1.1</h4>
+
+            <p>🆕 Added floating animation to the stars on the landing page.</p>
+            <p>🆕 Added hover effects to anchor links.</p>
+            <p>🆕 Added a /blog page.</p>
+            <p>🐛 Fixed social channel links bug in the footer.</p>
+          </div>
         </div>
       </div>
       <div>
-        <button type="button" class="collapsible">
-          What are the new updates?
-        </button>
-
-        <div class="content">
-          <h3>v0.2 is currently in production! Scoped to launch in May.</h3>
-
-          <h4>Release Build v0.1.3</h4>
-
-          <p>🆕 Added a /faq page.</p>
-          <p>🏗 Updated /about page.</p>
-          <p>🏗 Cleaned up the codebase in preparation of v0.2.</p>
-          <p>💸 Compiled the pre-seed pitch deck.</p>
-
-          <h4>Release Build v0.1.2</h4>
-
-          <p>
-            🆕 Added a Privacy Policy. Thanks, Min-Kyu! 🆕 Added demo video. 🆕
-            Added release notes.
-          </p>
-          <p>🆕 Added blog posts.</p>
-          <p>🏗 Removed Patreon links.</p>
-          <p>🐛 Fixed the "Let's Get It On" autoplay bug.</p>
-
-          <h4>Release Build v0.1.1</h4>
-
-          <p>🆕 Added floating animation to the stars on the landing page.</p>
-          <p>🆕 Added hover effects to anchor links.</p>
-          <p>🆕 Added a /blog page.</p>
-          <p>🐛 Fixed social channel links bug in the footer.</p>
-        </div>
+        <p>
+          Let us know if you have other questions
+          <a href="mailto: sonnynomnom@gmail.com">here</a>.
+        </p>
       </div>
 
       <script>
@@ -305,12 +313,6 @@
         }
       </script>
 
-      <aside class="section--content">
-        <p>
-          Let us know if you have other questions
-          <a href="mailto: sonnynomnom@gmail.com">here</a>.
-        </p>
-      </aside>
       <div class="shoutout-embed" data-wall="karaoke_nite"></div>
       <script
         class="shoutout-script"
@@ -323,8 +325,11 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-left">
-          <span id="footer-name">KARAOKE NITE</span>
-          Made with <span aria-label="love" role="img">💖</span> in Brooklyn, NY
+          <div id="footer-name">KARAOKE NITE</div>
+          <div>
+            Made with <span aria-label="love" role="img">💖</span> in Brooklyn,
+            NY
+          </div>
         </div>
 
         <div class="footer-icons">
