--- a/public/blog.html
+++ b/public/blog.html
@@ -186,7 +186,7 @@
 
           <p>
             March has been an absolutely crazy month for us.
-            <!--         We launched on <a href="https://www.producthunt.com/posts/karaoke-nite?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-karaoke-nite" target="_blank">Product Hunt</a> and ended up being a runner-up for the Product of the Day! -->
+            <!--         We launched on <a class="link" href="https://www.producthunt.com/posts/karaoke-nite?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-karaoke-nite" target="_blank">Product Hunt</a> and ended up being a runner-up for the Product of the Day! -->
             We launched on Product Hunt and ended up being a runner-up for the
             Product of the Day!
           </p>
@@ -233,42 +233,66 @@
 
           <ul>
             <li>
-              <a href="https://twitter.com/jesslynnrose" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/jesslynnrose"
+                target="_blank"
                 >@jesslynnrose</a
               >
             </li>
             <li>
-              <a href="https://twitter.com/campyampire" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/campyampire"
+                target="_blank"
                 >@campyampire</a
               >
             </li>
             <li>
-              <a href="https://twitter.com/illathekilla" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/illathekilla"
+                target="_blank"
                 >@illathekilla</a
               >
             </li>
             <li>
-              <a href="https://twitter.com/catherinezh" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/catherinezh"
+                target="_blank"
                 >@catherinezh</a
               >
             </li>
             <li>
-              <a href="https://twitter.com/jay_yow07" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/jay_yow07"
+                target="_blank"
                 >@jay_yow07</a
               >
             </li>
             <li>
-              <a href="https://twitter.com/supermandota2" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/supermandota2"
+                target="_blank"
                 >@supermandota2</a
               >
             </li>
             <li>
-              <a href="https://twitter.com/hueypriest" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/hueypriest"
+                target="_blank"
                 >@hueypriest</a
               >
             </li>
             <li>
-              <a href="https://twitter.com/catheryn_li" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/catheryn_li"
+                target="_blank"
                 >@catheryn_li</a
               >
             </li>
@@ -297,7 +321,10 @@
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fsonny.png?v=1596248195534"
                 alt="@sonnynomnom<"
               />
-              <a href="https://twitter.com/sonnynomnom" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/sonnynomnom"
+                target="_blank"
                 ><div class="memberlabel">@sonnynomnom</div></a
               >
             </div>
@@ -307,7 +334,10 @@
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fjackieliu.jpg?v=1596248186734"
                 alt="@jackieis_online"
               />
-              <a href="https://twitter.com/jackieis_online" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/jackieis_online"
+                target="_blank"
                 ><div class="memberlabel">@jackieis_online</div></a
               >
             </div>
@@ -317,7 +347,10 @@
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fjosh.jpg?v=1596248189591"
                 alt="@joshuakgoldberg"
               />
-              <a href="https://twitter.com/JoshuaKGoldberg" target="_blank"
+              <a
+                class="link"
+                href="https://twitter.com/JoshuaKGoldberg"
+                target="_blank"
                 ><div class="memberlabel">@joshuakgoldberg</div></a
               >
             </div>
@@ -327,7 +360,7 @@
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Firlfede.jpg?v=1596248192436"
                 alt="@irlfede<"
               />
-              <a href="https://twitter.com/irlfede" target="_blank"
+              <a class="link" href="https://twitter.com/irlfede" target="_blank"
                 ><div class="memberlabel">@irlfede</div></a
               >
             </div>
@@ -337,7 +370,10 @@
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fmicaela.jpg?v=1596248304793"
                 alt="@micaelars"
               />
-              <a href="https://www.behance.net/micaelars" target="_blank"
+              <a
+                class="link"
+                href="https://www.behance.net/micaelars"
+                target="_blank"
                 ><div class="memberlabel">@micaelars</div></a
               >
             </div>
@@ -345,7 +381,10 @@
 
           <p>
             And our friend
-            <a href="https://twitter.com/HaydenLee37" target="_blank"
+            <a
+              class="link"
+              href="https://twitter.com/HaydenLee37"
+              target="_blank"
               >@haydenlee37</a
             >
             for all the debugging help! 🔎
@@ -354,37 +393,39 @@
       </div>
       <aside>
         <h4>Release Build v0.1.3</h4>
-        <ul class="release-list">
-          <li class="release-item">🆕 Added a /faq page.</li>
-          <li class="release-item">🏗 Updated /about page.</li>
-          <li class="release-item">
+        <ul class="emojilist">
+          <li class="emojilist-item">🆕 Added a /faq page.</li>
+          <li class="emojilist-item">🏗 Updated /about page.</li>
+          <li class="emojilist-item">
             🏗 Cleaned up the codebase in preparation of v0.2.
           </li>
-          <li class="release-item">💸 Compiled the pre-seed pitch deck.</li>
+          <li class="emojilist-item">💸 Compiled the pre-seed pitch deck.</li>
         </ul>
 
         <h4>Release Build v0.1.2</h4>
-        <ul class="release-list">
-          <li class="release-item">
+        <ul class="emojilist">
+          <li class="emojilist-item">
             🆕 Added a Privacy Policy. Thanks, Min-Kyu!
           </li>
-          <li class="release-item">🆕 Added demo video.</li>
-          <li class="release-item">🆕 Added release notes.</li>
-          <li class="release-item">🆕 Added blog posts.</li>
-          <li class="release-item">🏗 Removed Patreon links.</li>
-          <li class="release-item">
+          <li class="emojilist-item">🆕 Added demo video.</li>
+          <li class="emojilist-item">🆕 Added release notes.</li>
+          <li class="emojilist-item">🆕 Added blog posts.</li>
+          <li class="emojilist-item">🏗 Removed Patreon links.</li>
+          <li class="emojilist-item">
             🐛 Fixed the "Let's Get It On" autoplay bug.
           </li>
         </ul>
 
         <h4>Release Build v0.1.1</h4>
-        <ul class="release-list">
-          <li class="release-item">
+        <ul class="emojilist">
+          <li class="emojilist-item">
             🆕 Added floating animation to the stars on the landing page.
           </li>
-          <li class="release-item">🆕 Added hover effects to anchor links.</li>
-          <li class="release-item">🆕 Added a /blog page.</li>
-          <li class="release-item">
+          <li class="emojilist-item">
+            🆕 Added hover effects to anchor links.
+          </li>
+          <li class="emojilist-item">🆕 Added a /blog page.</li>
+          <li class="emojilist-item">
             🐛 Fixed social channel links bug in the footer.
           </li>
         </ul>
@@ -409,7 +450,11 @@
 
         <div class="footer-icons">
           <div class="column">
-            <a href="https://www.facebook.com/karaokenite2021" target="_blank">
+            <a
+              class="link"
+              href="https://www.facebook.com/karaokenite2021"
+              target="_blank"
+            >
               <img
                 class="social"
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ffacebook-logo.svg?v=1597727187930"
@@ -417,7 +462,11 @@
           </div>
 
           <div class="column">
-            <a href="https://www.instagram.com/karaokenite" target="_blank">
+            <a
+              class="link"
+              href="https://www.instagram.com/karaokenite"
+              target="_blank"
+            >
               <img
                 class="social"
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Finstagram-logo.svg?v=1597727187949"
@@ -425,7 +474,11 @@
           </div>
 
           <div class="column">
-            <a href="https://www.twitter.com/karaoke_nite" target="_blank">
+            <a
+              class="link"
+              href="https://www.twitter.com/karaoke_nite"
+              target="_blank"
+            >
               <img
                 class="social"
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ftwitter-logo.svg?v=1597727187978"
@@ -433,7 +486,11 @@
           </div>
 
           <div class="column">
-            <a href="https://www.github.com/karaokenite" target="_blank">
+            <a
+              class="link"
+              href="https://www.github.com/karaokenite"
+              target="_blank"
+            >
               <img
                 class="social"
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fgithub-logo.svg?v=1597727187892"
@@ -441,7 +498,7 @@
           </div>
 
           <div class="column">
-            <a href="https://discord.gg/xUc8m25" target="_blank">
+            <a class="link" href="https://discord.gg/xUc8m25" target="_blank">
               <img
                 class="social"
                 src="https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fdiscord%20logo.svg?v=1599600184242"
