--- a/public/faq.html
+++ b/public/faq.html
@@ -154,7 +154,7 @@
       </nav>
     </header>
 
-    <main class="container__md">
+    <main class="container__md container__spaced">
       <h1>💬 Frequently Asked Questions</h1>
       <div class="collapse">
         <div class="collapse-area">
@@ -174,6 +174,7 @@
               <li>
                 $49.99
                 <a
+                  class="link"
                   href="https://www.amazon.com/Singing-Machine-Bluetooth-Microphone-CPK545/dp/B07SLFVGSC/"
                   target="_blank"
                 >
@@ -184,6 +185,7 @@
               <li>
                 $16.99
                 <a
+                  class="link"
                   href="https://www.amazon.com/Handheld-Microphone-Nintendo-Singing-Compatible/dp/B08K6WXR29"
                   target="_blank"
                 >
@@ -262,30 +264,45 @@
 
           <div class="content collapse-content">
             <h3>v0.2 is currently in production! Scoped to launch in May.</h3>
-
             <h4>Release Build v0.1.3</h4>
-
-            <p>🆕 Added a /faq page.</p>
-            <p>🏗 Updated /about page.</p>
-            <p>🏗 Cleaned up the codebase in preparation of v0.2.</p>
-            <p>💸 Compiled the pre-seed pitch deck.</p>
+            <ul class="emojilist">
+              <li class="emojilist-item">🆕 Added a /faq page.</li>
+              <li class="emojilist-item">🏗 Updated /about page.</li>
+              <li class="emojilist-item">
+                🏗 Cleaned up the codebase in preparation of v0.2.
+              </li>
+              <li class="emojilist-item">
+                💸 Compiled the pre-seed pitch deck.
+              </li>
+            </ul>
 
             <h4>Release Build v0.1.2</h4>
-
-            <p>
-              🆕 Added a Privacy Policy. Thanks, Min-Kyu! 🆕 Added demo video.
-              🆕 Added release notes.
-            </p>
-            <p>🆕 Added blog posts.</p>
-            <p>🏗 Removed Patreon links.</p>
-            <p>🐛 Fixed the "Let's Get It On" autoplay bug.</p>
+            <ul class="emojilist">
+              <li class="emojilist-item">
+                🆕 Added a Privacy Policy. Thanks, Min-Kyu!
+              </li>
+              <li class="emojilist-item">🆕 Added demo video.</li>
+              <li class="emojilist-item">🆕 Added release notes.</li>
+              <li class="emojilist-item">🆕 Added blog posts.</li>
+              <li class="emojilist-item">🏗 Removed Patreon links.</li>
+              <li class="emojilist-item">
+                🐛 Fixed the "Let's Get It On" autoplay bug.
+              </li>
+            </ul>
 
             <h4>Release Build v0.1.1</h4>
-
-            <p>🆕 Added floating animation to the stars on the landing page.</p>
-            <p>🆕 Added hover effects to anchor links.</p>
-            <p>🆕 Added a /blog page.</p>
-            <p>🐛 Fixed social channel links bug in the footer.</p>
+            <ul class="emojilist">
+              <li class="emojilist-item">
+                🆕 Added floating animation to the stars on the landing page.
+              </li>
+              <li class="emojilist-item">
+                🆕 Added hover effects to anchor links.
+              </li>
+              <li class="emojilist-item">🆕 Added a /blog page.</li>
+              <li class="emojilist-item">
+                🐛 Fixed social channel links bug in the footer.
+              </li>
+            </ul>
           </div>
         </div>
       </div>
