--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@ if (location.protocol != 'https:') {
 </script> 
 -->
 
-  <body id="home">
+  <body id="home" class="dark-bg">
     <div>
       <a
         href="https://github.com/karaokenite"
