--- a/public/faq.html
+++ b/public/faq.html
@@ -68,8 +68,8 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
-      gtag("config", "UA-167427633-1");
+      gtag('js', new Date());
+      gtag('config', 'UA-167427633-1');
     </script>
 
     <!-- Hotjar Tracking Code for https://www.karaokenite.co -->
@@ -81,12 +81,12 @@
             (h.hj.q = h.hj.q || []).push(arguments);
           };
         h._hjSettings = { hjid: 1946635, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
+        a = o.getElementsByTagName('head')[0];
+        r = o.createElement('script');
         r.async = 1;
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+      })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
   </head>
 
@@ -314,17 +314,17 @@
       </div>
 
       <script>
-        var coll = document.getElementsByClassName("collapsible");
+        var coll = document.getElementsByClassName('collapsible');
         var i;
 
         for (i = 0; i < coll.length; i++) {
-          coll[i].addEventListener("click", function () {
-            this.classList.toggle("active");
+          coll[i].addEventListener('click', function () {
+            this.classList.toggle('active');
             var content = this.nextElementSibling;
-            if (content.style.display === "block") {
-              content.style.display = "none";
+            if (content.style.display === 'block') {
+              content.style.display = 'none';
             } else {
-              content.style.display = "block";
+              content.style.display = 'block';
             }
           });
         }
