--- a/public/blog.html
+++ b/public/blog.html
@@ -67,8 +67,8 @@
       function gtag() {
         dataLayer.push(arguments);
       }
-      gtag("js", new Date());
-      gtag("config", "UA-167427633-1");
+      gtag('js', new Date());
+      gtag('config', 'UA-167427633-1');
     </script>
 
     <!-- Hotjar Tracking Code for https://www.karaokenite.co -->
@@ -80,12 +80,12 @@
             (h.hj.q = h.hj.q || []).push(arguments);
           };
         h._hjSettings = { hjid: 1946635, hjsv: 6 };
-        a = o.getElementsByTagName("head")[0];
-        r = o.createElement("script");
+        a = o.getElementsByTagName('head')[0];
+        r = o.createElement('script');
         r.async = 1;
         r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
         a.appendChild(r);
-      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+      })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
     </script>
   </head>
 
