Fix parsing at HTML

--- a/public/scene.html
+++ b/public/scene.html
@@ -61,65 +61,63 @@
 
     <link href="/styles/scene.css" rel="stylesheet" type="text/css" />
     <link href="/styles/shared.css" rel="stylesheet" type="text/css" />
-
+    <!-- Karaoke Playlist (mp4's) -->
     <script>
-      <!-- Karaoke Playlist (mp4's) -->
-
       var playlist = [
-        'https://cdn.glitch.com/bf4db82b-cdcf-4019-a281-153f8e3d1e9f%2Fletsgetitonencoded.mp4?v=1588473010045', <!-- Let's Get it On -->
+        'https://cdn.glitch.com/bf4db82b-cdcf-4019-a281-153f8e3d1e9f%2Fletsgetitonencoded.mp4?v=1588473010045', // Let's Get it On
       ];
 
       var jukebox = [
-        'https://cdn.glitch.com/bd2f3733-359c-47c8-8e0b-7f7b493efb47%2Fencoded.mp4', <!-- Beast of Burden -->
-        'https://cdn.glitch.com/bf4db82b-cdcf-4019-a281-153f8e3d1e9f%2Fkillingmesoftly.mp4', <!-- Killing Me Softly -->
-        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FCoheed_And_Cambria_Blood_Red_Summer.mp4', <!-- Blood Red Summer -->
-        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FWheatus_Teenage_Dirtbag.mp4', <!-- Teenage Dirtbag -->
-        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FTaylor_Swift_Red.mp4', <!-- Red -->
-        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FGorillaz_Feel_Good_Inc.mp4', <!-- Feel Good Inc -->
-        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FOld_Crow_Medicine_Show_Wagon_Wheel.mp4', <!-- Wagon Wheel -->
-        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FJ_Cole_Power_Trip.mp4', <!-- Power Trip -->
-        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FDua_Lipa_Don_t_Start_Now.mp4', <!-- Don't Start Now -->
-        'https://cdn.glitch.com/bf4db82b-cdcf-4019-a281-153f8e3d1e9f%2Fletsgetitonencoded.mp4', <!-- Let's Get it On -->
-        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FThe_Shins_New_Slang.mp4', <!-- New Slang -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fsabrina-boys-summertime-love.m4v', <!-- Boys -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fredbone-come-and-get-your-love.m4v', <!-- Come and Get Your Love -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fkate-bush-running-up-that-hill.m4v', <!-- Running Up That Hill -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ffat-joe-whats-luv.m4v', <!-- What's Luv -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fblack-eyed-peas-where-is-the-love.m4v', <!-- Where Is the Love? -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fa-star-is-born-shallow.m4v', <!-- Shallow -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fdavid-bowie-%20starman.m4v', <!-- Starman -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ftamia-so-into-you.m4v', <!-- So Into You -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fmoana-how-far-ill-go.m4v', <!-- How Far I'll Go -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Favril-lavigne-complicated.m4v', <!-- Complicated -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fcoldplay-the-scientist.m4v', <!-- The Scientist -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fkanye-west-slow-jamz.m4v', <!-- Slow Jamz -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fkid-rock-only-god-knows-why.m4v', <!-- Only God Knows Why -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fincubus_drive.m4v', <!-- Drive -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fmgmt-electric-feel.m4v', <!-- Electric Feel -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fti-whatever-you-like.m4v', <!-- Whatever You Like -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fbillie-eilish-when-the-partys-over.m4v', <!-- When the Party's Over -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fthe-strokes-last-nite.m4v', <!-- Last Nite -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fboston-more-than-a-feeling.m4v', <!-- More Than a Feeling -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fpixies-where-is-my-mind.m4v', <!-- Where Is My Mind -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Faersomith-cryin.m4v', <!-- Cryin' -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fnicki-minaj-super-bass.m4v', <!-- Super Bass -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fthe-mamas-and-the-papas-california-dreamin.m4v', <!-- California Dreamin' -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fsheryl-crow-first-cut-is-the-deepest.m4v', <!-- First Cut Is the Deepest -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FBlackpink-Ddu-Du-Ddu-Du.m4v', <!-- Ddu-Du Ddu-Du (뚜두뚜두) -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fcamila-cabello-havana.m4v', <!-- Havana -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FBlue_Swede_Hooked_On_A_Feeling.m4v', <!-- Hooked on a Feeling -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fadele_%20hello.m4v', <!-- Hello -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FDrake_Best_I_Ever_Had.m4v', <!-- Best I Ever Had -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fbeyonce-crazy-in-love.m4v', <!-- Crazy in Love -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fjonas-brothers-burnin-up.m4v', <!-- Burnin' Up -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Flizzo-truth-hurts.m4v', <!-- Truth Hurts -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fbts-boy-with-luv.m4v', <!-- Boy with Luv -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fcardi-b-bodak-yellow.m4v', <!-- Bodak Yellow -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FThe_Beatles_Yesterday.m4v', <!-- Yesterday -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fshawn_mendes_senorita.m4v', <!-- Señorita -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FWhitney_Houston_I_Will_Always_Love_You.m4v', <!-- I Will Always Love You -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FRed_Hot_Chili_Peppers_Under_The_Bridge.m4v', <!-- Under the Bridge -->
-        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FDolly_Parton_Jolene.m4v', <!-- Jolene -->
+        'https://cdn.glitch.com/bd2f3733-359c-47c8-8e0b-7f7b493efb47%2Fencoded.mp4', // Beast of Burden
+        'https://cdn.glitch.com/bf4db82b-cdcf-4019-a281-153f8e3d1e9f%2Fkillingmesoftly.mp4', // Killing Me Softly
+        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FCoheed_And_Cambria_Blood_Red_Summer.mp4', // Blood Red Summer
+        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FWheatus_Teenage_Dirtbag.mp4', // Teenage Dirtbag
+        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FTaylor_Swift_Red.mp4', // Red
+        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FGorillaz_Feel_Good_Inc.mp4', // Feel Good Inc
+        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FOld_Crow_Medicine_Show_Wagon_Wheel.mp4', // Wagon Wheel
+        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FJ_Cole_Power_Trip.mp4', // Power Trip
+        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FDua_Lipa_Don_t_Start_Now.mp4', // Don't Start Now
+        'https://cdn.glitch.com/bf4db82b-cdcf-4019-a281-153f8e3d1e9f%2Fletsgetitonencoded.mp4', // Let's Get it On
+        'https://cdn.glitch.com/b5b49e97-d435-4e07-920c-7156ab5602a2%2FThe_Shins_New_Slang.mp4', // New Slang
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fsabrina-boys-summertime-love.m4v', // Boys
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fredbone-come-and-get-your-love.m4v', // Come and Get Your Love
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fkate-bush-running-up-that-hill.m4v', // Running Up That Hill
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ffat-joe-whats-luv.m4v', // What's Luv
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fblack-eyed-peas-where-is-the-love.m4v', // Where Is the Love?
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fa-star-is-born-shallow.m4v', // Shallow
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fdavid-bowie-%20starman.m4v', // Starman
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Ftamia-so-into-you.m4v', // So Into You
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fmoana-how-far-ill-go.m4v', // How Far I'll Go
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Favril-lavigne-complicated.m4v', // Complicated
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fcoldplay-the-scientist.m4v', // The Scientist
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fkanye-west-slow-jamz.m4v', // Slow Jamz
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fkid-rock-only-god-knows-why.m4v', // Only God Knows Why
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fincubus_drive.m4v', // Drive
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fmgmt-electric-feel.m4v', // Electric Feel
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fti-whatever-you-like.m4v', // Whatever You Like
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fbillie-eilish-when-the-partys-over.m4v', // When the Party's Over
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fthe-strokes-last-nite.m4v', // Last Nite
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fboston-more-than-a-feeling.m4v', // More Than a Feeling
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fpixies-where-is-my-mind.m4v', // Where Is My Mind
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Faersomith-cryin.m4v', // Cryin'
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fnicki-minaj-super-bass.m4v', // Super Bass
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fthe-mamas-and-the-papas-california-dreamin.m4v', // California Dreamin'
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fsheryl-crow-first-cut-is-the-deepest.m4v', // First Cut Is the Deepest
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FBlackpink-Ddu-Du-Ddu-Du.m4v', // Ddu-Du Ddu-Du (뚜두뚜두)
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fcamila-cabello-havana.m4v', // Havana
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FBlue_Swede_Hooked_On_A_Feeling.m4v', // Hooked on a Feeling
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fadele_%20hello.m4v', // Hello
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FDrake_Best_I_Ever_Had.m4v', // Best I Ever Had
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fbeyonce-crazy-in-love.m4v', // Crazy in Love
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fjonas-brothers-burnin-up.m4v', // Burnin' Up
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Flizzo-truth-hurts.m4v', // Truth Hurts
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fbts-boy-with-luv.m4v', // Boy with Luv
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fcardi-b-bodak-yellow.m4v', // Bodak Yellow
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FThe_Beatles_Yesterday.m4v', // Yesterday
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2Fshawn_mendes_senorita.m4v', // Señorita
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FWhitney_Houston_I_Will_Always_Love_You.m4v', // I Will Always Love You
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FRed_Hot_Chili_Peppers_Under_The_Bridge.m4v', // Under the Bridge
+        'https://cdn.glitch.com/b316bbdc-0b0c-4c6d-94fb-fffb37f510a9%2FDolly_Parton_Jolene.m4v', // Jolene
       ];
 
       // These match up to the jukebox array above
@@ -223,7 +221,7 @@
         document.getElementById('added-notice').removeAttribute('populated');
       }
 
-      <!-- ⏯ Play & Pause buttons ⏯ -->
+      // ⏯ Play & Pause buttons ⏯
 
       AFRAME.registerComponent('play-pause', {
         init: function () {
@@ -247,7 +245,7 @@
         },
       });
 
-      <!-- ⏩ Next button ⏩ -->
+      // ⏩ Next button ⏩
 
       var i = 0;
 
@@ -260,7 +258,7 @@
           this.el.addEventListener('click', function () {
             i++;
 
-            <!-- Start from beginning if needed -->
+            // Start from beginning if needed
             if (i == playlist.length) i = 0;
 
             var videoSync = document.querySelector('[video-sync]');
@@ -280,7 +278,7 @@
           this.el.addEventListener('click', function () {
             i--;
 
-            <!-- Start from beginning if needed -->
+            // Start from beginning if needed
             if (i == -1) i = 0;
 
             var videoSync = document.querySelector('[video-sync]');
