--- a/public/index.html
+++ b/public/index.html
@@ -360,14 +360,14 @@ if (location.protocol != 'https:') {
         <div class="section--content recap-contents">
           <p class="recap-description">
             Looking for something to do with friends during quarantine?
-            <br />Have a Karaoke Nite!
           </p>
+          <p class="recap-description">Have a Karaoke Nite!</p>
           <a class="recap-link button" href="#top">Create a Room</a>
         </div>
       </section>
 
       <!-- Newsletter (Sonny) -->
-      <section id="newsletter" class="section--content">
+      <section id="newsletter" class="newsletter section--content">
         <h2>Keep up with the party!</h2>
         <p class="newsletter--description">
           Join our newsletter to get Karaoke Nite updates from our team.
