add some utilities

--- a/public/index.html
+++ b/public/index.html
@@ -358,10 +358,10 @@ if (location.protocol != 'https:') {
 
       <section id="recap" class="recap light">
         <div class="section--content recap-contents">
-          <p class="recap-description">
+          <p class="recap-description text__center">
             Looking for something to do with friends during quarantine?
           </p>
-          <p class="recap-description">Have a Karaoke Nite!</p>
+          <p class="recap-description text__center">Have a Karaoke Nite!</p>
           <a class="recap-link button" href="#top">Create a Room</a>
         </div>
       </section>
